chore: finalize CMS config for main

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: Tsaroz/tsaroz.github.io
-  branch: cms-test
+  branch: main
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
