--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,9 +2,12 @@ backend:
   name: github
   repo: Tsaroz/tsaroz.github.io
   branch: main
+  auth_endpoint: /admin/
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
+
+local_backend: false
 
 collections:
   - name: "faucets"
