--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,6 @@ backend:
   name: github
   repo: Tsaroz/tsaroz.github.io
   branch: main
-  useWorkflow: false
 
 local_backend: false
 
@@ -17,7 +16,7 @@ collections:
     fields:
       - { label: "Section", name: "section", widget: "select", options: ["Top 20 Best", "Hourly", "Gaming", "NO Timer Direct"] }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Logo Path", name: "logo", widget: "string", required: false }
+      - { label: "Logo Path (e.g. images/vie.png)", name: "logo", widget: "string", required: false }
       - { label: "Feature 1", name: "feature1", widget: "string" }
       - { label: "Feature 2", name: "feature2", widget: "string" }
       - { label: "Visit URL", name: "url", widget: "string" }
